# nagatolib

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  Tensor.cpp  mnist.py  nagatolib.cmake  start_verify
Metal/: Metal.hpp  metal_array.cpp  metal_array.hpp  metal_base.cpp  metal_base.hpp  metal_buffer.cpp  metal_buffer.hpp  metal_common.hpp  metal_function_base.cpp  metal_function_base.hpp  metal_functions.cpp  metal_functions.hpp  metal_functions_impl.hpp  tensor.hpp  timer.cpp  timer.hpp
example/: matrix_example.cpp  metal_example.cpp  narray_example.cpp  random_example.cpp  tensor_example.cpp  thread_example.cpp  vector_example.cpp
expand/.verify-helper/: config.toml
metal_kernel/: add.metal  linear_algebra.metal
src/: assert.hpp  binarytree.cpp  binarytree.hpp  blocked_queue.cpp  blocked_queue.hpp  math.hpp  matrix.hpp  matrix_n.cpp  matrix_n.hpp  nagato.cpp  nagato.h  nagato.hpp  nagatolib.hpp  narray.cpp  narray.hpp  narray_concepts.hpp  narray_functions.hpp  narray_functions_impl.hpp  narray_impl.hpp  narray_inner.hpp  narray_inner_impl.hpp  narray_types.hpp  network.cpp  network.hpp  random.h  random.hpp  tensor.cpp  tensor.hpp  thread.cpp  thread.hpp  type_traits.hpp  vector.h  vector.hpp
test/: binary_tree.cpp  matorixN_test.cpp  matorix_test.cpp  metal_test.cpp  narray_test.cpp  tensor_test.cpp  test_main.cpp  vector_test.cpp
verify/: CMakeLists.txt  binary_trees.test.cpp  sample.test.cpp
